gcc/testsuite/gfortran.dg/whole_file_18.f90
@@ -1,0 +1,14 @@
+! { dg-do "compile" }
+! { dg-options "-fwhole-file" }
+!
+! PR fortran/34260
+!
+      PROGRAM MAIN
+      REAL A
+      CALL SUB(A)             ! { dg-error "requires an explicit interface" }
+      END PROGRAM
+
+      SUBROUTINE SUB(A,I)
+      REAL :: A
+      INTEGER, OPTIONAL :: I
+      END SUBROUTINE
